Margin fix for navbar + medium card input spacing

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -176,6 +176,7 @@
     display: none;
   }
   .navbar-list.collapsed {
+    margin-top: 1rem;
     max-height: 100vh;
     opacity: 1;
     display: flex;
