--- a/src/components/SongCards/MediumCard/MediumCard.module.css
+++ b/src/components/SongCards/MediumCard/MediumCard.module.css
@@ -27,6 +27,9 @@
   opacity: 0.7;
   font-size: 1.2rem;
 }
+.medium-card input {
+  width: 100%;
+}
 
 .medium-card .album {
   width: 100%;
